# dust

./: .gitignore  AGENT_STRESS_TEST.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  claude_desktop_config.json  clippy.toml  install.sh  opencode.json  release.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs_feedback.yml  enterprise_contact.yml  feature_request.md  support_question.yml  team_beta.yml
.github/workflows/: cargo-release.yml  ci.yml  release.yml  site.yml
apps/www/: index.html
apps/www/assets/: site.css  site.js
apps/www/docs/: index.html  search-index.json
apps/www/docs/architecture/: index.html
apps/www/docs/cli/: index.html
apps/www/docs/faq/: index.html
apps/www/docs/launch-checklist/: index.html
apps/www/docs/launch-post/: index.html
apps/www/docs/ops/commercial-ops-runbook/: index.html
apps/www/docs/ops/launch-infrastructure/: index.html
apps/www/docs/overview/: index.html
apps/www/docs/pricing/: index.html
apps/www/docs/python-client/: index.html
apps/www/docs/rfcs/compatibility-and-release/: index.html
apps/www/docs/roadmap/: index.html
apps/www/docs/support/: index.html
apps/www/docs/waitlist/: index.html
apps/www/faq/: index.html
apps/www/policies/billing/: index.html
apps/www/policies/privacy/: index.html
apps/www/policies/terms/: index.html
apps/www/pricing/: index.html
apps/www/support/: index.html
apps/www/waitlist/: index.html
assets/benchmarks/: README.md  generate_charts.py
assets/benchmarks/data/: bench_20260322_182631.json  bench_20260322_182638.json  bench_20260322_182644.json  bench_20260322_184346.json  median_results.json
assets/benchmarks/terminal-demos/: demo_import.sh  demo_workflow.sh  import.cast  import_transcript.txt  workflow.cast  workflow_transcript.txt
assets/readme/: demo.tape
benches/: README.md  bench_core.rs  run.sh
crates/dust-catalog/: Cargo.toml
crates/dust-catalog/src/: catalog.rs  ingest.rs  lib.rs  object.rs
crates/dust-cli/: Cargo.toml
crates/dust-cli/.dust/workspace/: data.schema.toml
crates/dust-cli/src/: demo_data.rs  format.rs  import_postgres.rs  import_sqlite.rs  main.rs  pgwire.rs  project.rs  sql_quote.rs  style.rs  test_support.rs
crates/dust-cli/src/commands/: bench.rs  branch.rs  codegen.rs  demo.rs  deploy.rs  dev.rs  diff.rs  doctor.rs  explain.rs  export.rs  import.rs  init.rs  lint.rs  lsp.rs  merge.rs  migrate.rs  mod.rs  query.rs  remote.rs  seed.rs  serve.rs  shell.rs  snapshot.rs  status.rs  test.rs
crates/dust-cli/src/commands/dev/: seeds.rs
crates/dust-codegen/: Cargo.toml
crates/dust-codegen/src/: lib.rs  parser.rs  rust.rs  typescript.rs
crates/dust-core/: Cargo.toml
crates/dust-core/src/: database.rs  lib.rs  project.rs
crates/dust-core/templates/project/: dust.toml
crates/dust-exec/: Cargo.toml
crates/dust-exec/src/: aggregate.rs  binder.rs  column.rs  datetime.rs  deterministic.rs  engine.rs  engine.rs.bak  eval.rs  expr_validate.rs  lib.rs  persistent.rs  persistent_schema.rs  set_ops.rs  storage.rs  udf.rs  vector.rs  wasm_udf.rs
crates/dust-lsp/: Cargo.toml
crates/dust-lsp/src/: codec.rs  lib.rs  main.rs  server.rs
crates/dust-mcp/: Cargo.toml
crates/dust-mcp/src/: lib.rs  main.rs  protocol.rs  tools.rs
crates/dust-mcp/tests/: integration.rs
crates/dust-migrate/: Cargo.toml
crates/dust-migrate/src/: apply.rs  diff.rs  lib.rs  lockfile.rs  metadata.rs  plan.rs  replay.rs  status.rs
crates/dust-plan/: Cargo.toml
crates/dust-plan/src/: lib.rs  logical.rs  physical.rs
crates/dust-sql/: Cargo.toml
crates/dust-sql/src/: ast.rs  lexer.rs  lib.rs  parser.rs  quote.rs
crates/dust-store/: Cargo.toml
crates/dust-store/src/: branch.rs  btree.rs  columnar.rs  lib.rs  manifest.rs  materialize.rs  merge.rs  pack.rs  page.rs  pager.rs  remote.rs  row.rs  snapshot.rs  table.rs  tx.rs  vfs.rs  wal.rs  wal_writer.rs  workspace.rs
crates/dust-testing/: Cargo.toml
crates/dust-testing/benches/: benchmarks.rs
crates/dust-testing/src/: lib.rs
crates/dust-testing/tests/: crash_recovery.rs  differential_tests.rs  sqllogictest_runner.rs
crates/dust-testing/tests/sqllogictest/: slt_aggregates.slt  slt_basics.slt  slt_create_table.slt  slt_groupby.slt  slt_insert_update_delete.slt  slt_join.slt  slt_null.slt  slt_orderby.slt  slt_scalar_functions.slt  slt_subqueries.slt  slt_transactions.slt  slt_where.slt
crates/dust-types/: Cargo.toml
crates/dust-types/src/: error.rs  fingerprint.rs  id.rs  lib.rs
docs/: architecture.md  cli.md  faq.md  file-format-v0.md  launch-checklist.md  launch-post.md  pricing.md  python-client.md  quickstart.md  release-framing.md  rfc-v0-contracts.md  roadmap.md  schema-identity.md  strategy.md  support.md  v0.1.1-preflight-checklist.md  vision.md  waitlist.md
docs/blog/: benchmark-launch.md
docs/ops/: commercial-ops-runbook.md  launch-infrastructure.md
docs/research/: core-wedge-decision-memo-template.md  core-wedge-evidence-template.md  core-wedge-interview-script.md  core-wedge-validation-plan.md
docs/rfcs/: compatibility-and-release.md  plugin-registry.md
examples/: finance.sql  quickstart.sql
fuzz/: README.md
fuzz/fuzz_targets/: schema_metadata.rs  sql_parser.rs
integrations/openai/: tools.json
integrations/python/: README.md  pyproject.toml
integrations/python/src/dust/: __init__.py  client.py  tools.py
sdk/python/: README.md  pyproject.toml
sdk/python/dust_client/: __init__.py  client.py
site/: index.html  install.sh  nginx.conf  railway.json
templates/project/: dust.toml
templates/project/db/: schema.sql
templates/samples/branch-lab/: README.md
templates/samples/branch-lab/db/: schema.sql
templates/samples/branch-lab/queries/: account_balances.sql
templates/samples/inventory-demo/: README.md
templates/samples/inventory-demo/db/: schema.sql
templates/samples/inventory-demo/queries/: reorder_report.sql
tests/: finance_test.py  showoff.py  sql_torture.sql
xtask/: Cargo.toml
xtask/src/: main.rs
(+9 files in other folders)
