[workspace]
members = [
    "crates/dust-cli",
    "crates/dust-core",
    "crates/dust-types",
    "crates/dust-sql",
    "crates/dust-catalog",
    "crates/dust-store",
    "crates/dust-plan",
    "crates/dust-exec",
    "crates/dust-migrate",
    "crates/dust-testing",
    "crates/dust-mcp",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
clap = { version = "4.5.48", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
rustyline = "15.0.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.23"

