[workspace]
members = [
    "crates/dust-cli",
    "crates/dust-core",
    "crates/dust-types",
    "crates/dust-sql",
    "crates/dust-catalog",
    "crates/dust-store",
    "crates/dust-plan",
    "crates/dust-exec",
    "crates/dust-migrate",
    "crates/dust-testing",
    "crates/dust-mcp",
    "crates/dust-lsp",
    "crates/dust-codegen",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
homepage = "https://github.com/Shannon-Labs/dust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Shannon-Labs/dust"
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
calamine = "0.25"
clap = { version = "4.5.48", features = ["derive"] }
dust-catalog = { version = "0.1.1", path = "crates/dust-catalog" }
dust-codegen = { version = "0.1.1", path = "crates/dust-codegen" }
dust-core = { version = "0.1.1", path = "crates/dust-core" }
dust-exec = { version = "0.1.1", path = "crates/dust-exec" }
dust-lsp = { version = "0.1.1", path = "crates/dust-lsp" }
dust-mcp = { version = "0.1.1", path = "crates/dust-mcp" }
dust-migrate = { version = "0.1.1", path = "crates/dust-migrate" }
dust-plan = { version = "0.1.1", path = "crates/dust-plan" }
dust-sql = { version = "0.1.1", path = "crates/dust-sql" }
dust-store = { version = "0.1.1", path = "crates/dust-store" }
dust-types = { version = "0.1.1", path = "crates/dust-types" }
miette = { version = "7.6.0", features = ["fancy"] }
parquet = { version = "53", default-features = false, features = ["snap"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
rustyline = "15.0.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.23"
hex = "0.4"
