[package]
description = "Schema catalog extraction and validation for Dust"
homepage.workspace = true
repository.workspace = true
name = "dust-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dust-types.workspace = true
dust-sql.workspace = true
