[package]
name = "dust-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "dust"
path = "src/main.rs"

[dependencies]
calamine.workspace = true
clap.workspace = true
csv = "1.3"
dust-core = { path = "../dust-core" }
dust-exec = { path = "../dust-exec" }
dust-mcp = { path = "../dust-mcp" }
dust-sql = { path = "../dust-sql" }
dust-store = { path = "../dust-store" }
dust-types = { path = "../dust-types" }
miette.workspace = true
rustyline.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
