[package]
categories = ["database", "command-line-utilities", "development-tools"]
description = "The database toolchain in one binary"
homepage.workspace = true
keywords = ["database", "sql", "branching", "developer-tools"]
license.workspace = true
name = "dust-cli"
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "dust"
path = "src/main.rs"

[dependencies]
calamine.workspace = true
clap.workspace = true
csv = "1.3"
dust-core = { path = "../dust-core" }
dust-exec = { path = "../dust-exec" }
dust-mcp = { path = "../dust-mcp" }
dust-sql = { path = "../dust-sql" }
dust-store = { path = "../dust-store" }
dust-types = { path = "../dust-types" }
flate2 = "1"
miette.workspace = true
parquet.workspace = true
rusqlite = { version = "0.35", features = ["bundled"] }
rustyline.workspace = true
serde_json.workspace = true
tar = "0.4"
tempfile.workspace = true
tokio.workspace = true
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
toml.workspace = true
