[package]
categories = ["database", "command-line-utilities", "development-tools"]
description = "An experimental local-first SQL workbench in one binary"
homepage.workspace = true
keywords = ["database", "sql", "branching", "developer-tools"]
license.workspace = true
name = "dust-cli"
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "dust"
path = "src/main.rs"

[dependencies]
calamine.workspace = true
clap.workspace = true
csv = "1.3"
dust-codegen.workspace = true
dust-core.workspace = true
dust-exec.workspace = true
dust-plan.workspace = true
dust-lsp.workspace = true
dust-mcp.workspace = true
dust-migrate.workspace = true
dust-sql.workspace = true
dust-store.workspace = true
dust-types.workspace = true
flate2 = "1"
miette.workspace = true
parquet.workspace = true
rusqlite = { version = "0.35", features = ["bundled"] }
rustyline.workspace = true
serde.workspace = true
serde_json.workspace = true
tar = "0.4"
tempfile.workspace = true
tokio.workspace = true
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
toml.workspace = true
