[package]
name = "dust-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dust-types = { path = "../dust-types" }
dust-sql = { path = "../dust-sql" }
dust-catalog = { path = "../dust-catalog" }

[dev-dependencies]
tempfile.workspace = true
