[package]
description = "Typed code generation for Dust schemas"
homepage.workspace = true
repository.workspace = true
name = "dust-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dust-types.workspace = true
dust-sql.workspace = true
dust-catalog.workspace = true

[dev-dependencies]
tempfile.workspace = true
