[package]
description = "Project and workspace primitives for Dust"
homepage.workspace = true
repository.workspace = true
name = "dust-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dust-catalog.workspace = true
dust-exec.workspace = true
dust-migrate.workspace = true
dust-plan.workspace = true
dust-sql.workspace = true
dust-store.workspace = true
dust-types.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
