[package]
description = "Query execution engine for Dust"
homepage.workspace = true
repository.workspace = true
name = "dust-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
wasm = ["wasmtime"]

[dependencies]
dust-catalog.workspace = true
dust-sql.workspace = true
dust-plan.workspace = true
dust-store.workspace = true
dust-types.workspace = true
serde.workspace = true
toml.workspace = true
wasmtime = { version = "29", optional = true }

[dev-dependencies]
tempfile.workspace = true
