[package]
description = "Language Server Protocol support for Dust SQL projects"
homepage.workspace = true
repository.workspace = true
name = "dust-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "dust-lsp"
path = "src/main.rs"

[dependencies]
dust-catalog.workspace = true
dust-sql.workspace = true
dust-types.workspace = true
serde.workspace = true
serde_json.workspace = true
