[package]
name = "dust-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) server for the dust SQL database"

[[bin]]
name = "dust-mcp"
path = "src/main.rs"

[dependencies]
dust-core = { path = "../dust-core" }
dust-exec = { path = "../dust-exec" }
dust-store = { path = "../dust-store" }
dust-types = { path = "../dust-types" }
serde = { workspace = true }
serde_json = "1"
csv = "1.3"
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
