[package]
name = "dust-mcp"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) server for the dust SQL database"

[lib]
name = "dust_mcp"
path = "src/lib.rs"

[[bin]]
name = "dust-mcp"
path = "src/main.rs"

[dependencies]
dust-core.workspace = true
dust-exec.workspace = true
dust-sql.workspace = true
dust-store.workspace = true
dust-types.workspace = true
serde = { workspace = true }
serde_json = "1"
csv = "1.3"
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
