[package]
name = "dust-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dust-catalog = { path = "../dust-catalog" }
dust-types = { path = "../dust-types" }
serde.workspace = true
toml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
