[package]
description = "Schema migration planning and application for Dust"
homepage.workspace = true
repository.workspace = true
name = "dust-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dust-catalog.workspace = true
dust-sql.workspace = true
dust-types.workspace = true
serde.workspace = true
toml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
