[package]
name = "dust-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
dust-types = { path = "../dust-types" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
