[package]
description = "Storage engine and branch workspace primitives for Dust"
homepage.workspace = true
repository.workspace = true
name = "dust-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
dust-types.workspace = true
hex.workspace = true
libc = "0.2"
serde.workspace = true
toml.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
