[package]
description = "Regression and workflow test harness for Dust"
homepage.workspace = true
name = "dust-testing"
publish = false
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dust-core.workspace = true
dust-exec.workspace = true
dust-plan.workspace = true
dust-store.workspace = true
csv = "1.3"
tempfile.workspace = true

[dev-dependencies]
rusqlite = { version = "0.35", features = ["bundled"] }

[package.metadata.release]
release = false
