[package]
description = "Shared types and errors for Dust"
homepage.workspace = true
repository.workspace = true
name = "dust-types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
