[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dust-db"
version = "0.1.0"
description = "Python integration for Dust — branchable local-first SQL database for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["sql", "database", "agents", "branching", "langchain", "llamaindex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.packages.find]
where = ["src"]
